# playwright-cdp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  justfile
assets/: injected_script.js
examples/: accessibility_example.rs  api_request.rs  api_request_config.rs  assertions.rs  assertions_extended.rs  bindings.rs  clock_example.rs  context_events_example.rs  contexts.rs  coverage_example.rs  demo.rs  dialogs_downloads.rs  expect_events.rs  frame_actions_example.rs  frames.rs  har_example.rs  interactions.rs  js_handle_example.rs  network.rs  network_details_example.rs  page_capture.rs  persistent_context.rs  route_fetch.rs  video_example.rs  web_storage_example.rs  websocket_example.rs
src/: accessibility.rs  api_request.rs  aria_snapshot.rs  assertions.rs  browser.rs  browser_context.rs  browser_process.rs  browser_type.rs  clock.rs  coverage.rs  download.rs  element_handle.rs  error.rs  file_chooser.rs  frame.rs  frame_locator.rs  har.rs  js_handle.rs  keyboard.rs  lib.rs  locator.rs  mouse.rs  network.rs  options.rs  page.rs  playwright.rs  request.rs  response.rs  route.rs  selectors.rs  touchscreen.rs  tracing.rs  types.rs  video.rs  web_socket.rs  web_storage.rs  worker.rs
src/cdp/: connection.rs  messages.rs  mod.rs  session.rs  transport.rs
tests/: api_request_config_smoke.rs  api_request_smoke.rs  aria_snapshot_smoke.rs  assertions_regex_smoke.rs  assertions_smoke.rs  batch2b_smoke.rs  context_route_smoke.rs  download_smoke.rs  expect_context_smoke.rs  expect_event_smoke.rs  expect_more_smoke.rs  expect_response_smoke.rs  expose_smoke.rs  file_chooser_smoke.rs  frame_locator_smoke.rs  locator_smoke.rs  network_smoke.rs  persistent_context_smoke.rs  phase_c_smoke.rs  route_fetch_smoke.rs  route_smoke.rs  screenshot_diff_smoke.rs  storage_state_smoke.rs  touchscreen_smoke.rs  tracing_smoke.rs  wait_for_function_smoke.rs  worker_smoke.rs
tests/common/: mod.rs
